feat: Enable browser-side JSX and env var for API key
Configure `index.html` to use Babel for client-side JSX transformation and define a placeholder for the API key. This allows the application to run directly in the browser without a separate build step for the frontend.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,21 @@
   }
 }
 </script>
+<!-- Babel for browser-side JSX transformation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<!-- Polyfill for process.env to allow API Key usage -->
+<script>
+  window.process = {
+    env: {
+      // __API_KEY__ will be replaced by the Netlify build command
+      API_KEY: "__API_KEY__"
+    }
+  };
+</script>
 </head>
   <body>
     <div id="root"></div>
+    <!-- Load the main entry file with Babel -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
